# Resturant_Agent-

./: README.md  config.py  main.py  menu.txt  pyproject.toml  tools.py  userdata.py
agents/: __init__.py  base.py  checkout.py  greeter.py  reservation.py  takeaway.py
api/: auth.py  database.py  db_service.py  main.py  models.py
knowledge/: faq.txt  ingredients.txt  menu.txt  policies.txt
rag/: docs_loader.py  embedding.py  ingest.py  retriever.py  search.py  splitter.py  vector_db.py  vectorstore.py
rag/faiss_index/: index.faiss  index.pkl
