[project]
name = "resturant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "livekit-agents[mistralai,turn-detector]~=1.5",
    "livekit-plugins-assemblyai>=1.6.0",
    "livekit-plugins-cartesia>=1.6.0",
    "livekit-plugins-deepgram>=1.6.0",
    "livekit-plugins-elevenlabs>=1.6.0",
    "livekit-plugins-groq>=1.6.0",
    "livekit-plugins-silero>=1.6.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "watchdog>=6.0.0",
]
