[project]
name = "resturant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "langchain-community>=0.4.2",
    "langchain-docling>=2.0.0",
    "langchain-mistralai>=1.1.5",
    "langchain-text-splitters>=1.1.2",
    "livekit-agents[mistralai,turn-detector]~=1.5",
    "livekit-api>=1.1.0",
    "livekit-plugins-assemblyai>=1.6.0",
    "livekit-plugins-cartesia>=1.6.0",
    "livekit-plugins-deepgram>=1.6.0",
    "livekit-plugins-elevenlabs>=1.6.0",
    "livekit-plugins-groq>=1.6.0",
    "livekit-plugins-silero>=1.6.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
]
